shnmkhk:Enabled Gzip compression and HTTP/2 if environment supports it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.url= ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5433/tweakpdf?user=postgres&password=postgres}
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
@@ -9,3 +13,15 @@ logging.level.org.springframework=INFO
 spring.profiles.active=production
 
 server.port=${PORT:5000}
+
+# Enable response compression
+server.compression.enabled=true
+
+# The comma-separated list of mime types that should be compressed
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+
+# Compress the response only if the response size is at least 1KB
+server.compression.min-response-size=1024
+
+# Enable HTTP/2 support, if the current environment supports it
+server.http2.enabled=true
