shnmkhk: Added support for API first

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5433/tweakpdf?user=postgres&password=postgres}
+spring.datasource.url= ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5433/tweakpdf}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
